# routers/Routers.go
@@ -38,7 +38,27 @@ func StartServer() *gin.Engine {
 	router.GET("/api/villagers", controllers.GetVillagers)
 	router.GET("/api/villagers/:id", controllers.GetVillager)
 	router.PUT("/api/villagers/:id", controllers.UpdateVillager)
+	router.GET("/api/villagers/:id/loans", controllers.GetVillagersWithLoans)
+	router.GET("/api/villagers/:id/loans", controllers.GetVillagerLoans)
 	router.DELETE("/api/villagers/:id", controllers.DeleteVillager)
+	
+
+	// Summary Routes
+	router.GET("/api/summary/infaq/week", controllers.GetInfaqSummaryByWeek)
+	router.GET("/api/summary/infaq/month", controllers.GetInfaqSummaryByMonth)
+	router.GET("/summary/fund-allocation", controllers.GetFundAllocation)
+
+	// Loan Routes
+	router.POST("/api/loans", controllers.RequestLoan)
+	router.POST("/api/loans/batch", controllers.PaymentLoan)
+	router.GET("/api/loans", controllers.GetAllLoans)
+	
+	// Payment Routes
+	router.POST("/api/loan_payments", controllers.CreatePayment)
+	router.PUT("/api/loan_payments/:id", controllers.UpdatePayment)
+	router.GET("/api/loan_payments", controllers.GetAllPayments)
+	router.GET("/api/loan_payments/:id", controllers.GetVillagersWithLoans)
+
 
 	return router
 }
